Visual omzetten in component voor volgende US, overflow Fix

--- a/src/components/addonCollection/raffle/Raffle.css
+++ b/src/components/addonCollection/raffle/Raffle.css
@@ -18,6 +18,7 @@
   height: 100vh;
   position: fixed;
   display: flex;
+  overflow: hidden;
 }
 
 .raffle {
